AIR stuff as a separate artifact in maven

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/pom.xml
@@ -445,6 +445,7 @@
 		<module>runtime</module> <!-- Runtime Projects -->
 		<module>p2.runtime</module> <!-- Update Site for Runtime Bundles -->
 		<module>p2.rcp</module> <!-- Update Site for Runtime Bundles -->
+        <module>air</module> <!-- AIR Projects -->
 		<module>releng</module>
 	</modules>
 
