--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/air/org.eclipse.dirigible.air/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/air/org.eclipse.dirigible.air/pom.xml
@@ -3,155 +3,17 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.eclipse.dirigible.releng</groupId>
-		<artifactId>org.eclipse.dirigible.releng.parent</artifactId>
+		<groupId>org.eclipse.dirigible.air</groupId>
+		<artifactId>org.eclipse.dirigible.air.parent</artifactId>
 		<version>2.7.170225</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>Releng - Air</name>
-	<artifactId>air</artifactId>
-	<packaging>war</packaging>
+	<name>AIR</name>
+	<artifactId>org.eclipse.dirigible.air</artifactId>
+	<packaging>jar</packaging>
 
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<configuration>
-					<wtpversion>1.5</wtpversion>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-				
-					<execution>
-						<id>external</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>unpack-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/lib</outputDirectory>
-							<includeArtifactIds>org.eclipse.dirigible.external.p2</includeArtifactIds>
-							<excludes>
-								**/*icu*.jar,
-								**/*derby*.jar,
-								**/*felix*.jar,
-								**/*archive*.jar,
-								**/*mongo*.jar,
-								**/*hamcrest*.jar,
-								**/*mockito*.jar,
-								**/*objenesis*.jar,
-								**/*slf*.jar
-							</excludes>
-						</configuration>
-					</execution>
-					
-					<execution>
-						<id>lib</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>unpack-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/lib</outputDirectory>
-							<includeArtifactIds>org.eclipse.dirigible.lib.p2</includeArtifactIds>
-							<excludes>
-								**/*activation*.jar,
-								**/*servlet*.jar,
-								**/*bridge_*.jar,
-								**/*equinox*.jar,
-								**/*osgi*.jar,
-								**/*hamcrest*.jar,
-								**/*mockito*.jar,
-								**/*objenesis*.jar,
-								**/*jsoup*.jar
-								**/*slf*.jar
-							</excludes>
-						</configuration>
-					</execution>
-					
-					<execution>
-						<id>repository</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>unpack-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/lib</outputDirectory>
-							<includeArtifactIds>org.eclipse.dirigible.repository.p2</includeArtifactIds>
-						</configuration>
-					</execution>
-
-					<execution>
-						<id>runtime</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>unpack-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/lib</outputDirectory>
-							<includeArtifactIds>org.eclipse.dirigible.runtime.p2</includeArtifactIds>
-						</configuration>
-					</execution>
-
-				</executions>
-			</plugin>
-
-			<plugin>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>replace-runtime-url</id>
-						<phase>prepare-package</phase>
-						<configuration>
-							<tasks>
-								<replace dir="${project.build.directory}/temp">
-									<include name="**/web.xml" />
-									<replacefilter token="@RUNTIME_URL@" value="${deployment.context}" />
-								</replace>
-							</tasks>
-						</configuration>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-
-					<execution>
-						<id>copy for distribution</id>
-						<phase>install</phase>
-						<configuration>
-							<tasks>
-
-								<!-- Copy deployable war, if relevant -->
-								<copy todir="../../../../dist/${deployment.type}/${artifactId}/">
-									<fileset dir="${project.build.directory}">
-										<include name="*.war" />
-									</fileset>
-								</copy>
-								
-								<!-- Copy executable jar, if relevant -->
-								<copy todir="../../../../dist/${deployment.type}/${artifactId}/">
-									<fileset dir="${project.build.directory}">
-										<include name="*.jar" />
-										<exclude name="dont-use.jar" />
-									</fileset>
-								</copy>
-
-							</tasks>
-						</configuration>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-		</plugins>
-	</build>
-
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.eclipse.dirigible.p2.external</groupId>
@@ -218,7 +80,7 @@
 			<artifactId>
 				org.eclipse.dirigible.repository.api
 			</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
@@ -227,7 +89,7 @@
 			<artifactId>
 				org.eclipse.dirigible.repository.datasource
 			</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
@@ -236,14 +98,14 @@
 			<artifactId>
 				org.eclipse.dirigible.repository.datasource.dialects
 			</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible.repository</groupId>
 			<artifactId>org.eclipse.dirigible.repository.db</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
@@ -252,7 +114,7 @@
 			<artifactId>
 				org.eclipse.dirigible.repository.db.init
 			</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
@@ -261,7 +123,7 @@
 			<artifactId>
 				org.eclipse.dirigible.repository.ext
 			</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
@@ -270,7 +132,7 @@
 			<artifactId>
 				org.eclipse.dirigible.repository.git
 			</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
@@ -279,7 +141,7 @@
 			<artifactId>
 				org.eclipse.dirigible.repository.local
 			</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
@@ -288,7 +150,7 @@
 			<artifactId>
 				org.eclipse.dirigible.repository.logging
 			</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
@@ -297,7 +159,7 @@
 			<artifactId>
 				org.eclipse.dirigible.repository.velocity
 			</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
@@ -306,7 +168,7 @@
 			<artifactId>
 				org.eclipse.dirigible.repository.zip
 			</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
@@ -315,13 +177,13 @@
 			<artifactId>
 				org.eclipse.dirigible.runtime.content
 			</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible.runtime</groupId>
 			<artifactId>org.eclipse.dirigible.runtime.cmis</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
@@ -330,28 +192,28 @@
 			<artifactId>
 				org.eclipse.dirigible.runtime.command
 			</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible.runtime</groupId>
 			<artifactId>org.eclipse.dirigible.runtime.core</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible.runtime</groupId>
 			<artifactId>org.eclipse.dirigible.runtime.flow</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible.runtime</groupId>
 			<artifactId>org.eclipse.dirigible.runtime.init</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
@@ -360,7 +222,7 @@
 			<artifactId>
 				org.eclipse.dirigible.runtime.javascript
 			</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
@@ -369,7 +231,7 @@
 			<artifactId>
 				org.eclipse.dirigible.runtime.javascript.nashorn
 			</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
@@ -378,7 +240,7 @@
 			<artifactId>
 				org.eclipse.dirigible.runtime.javascript.rhino
 			</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
@@ -387,7 +249,7 @@
 			<artifactId>
 				org.eclipse.dirigible.runtime.javascript.rhino.debugger
 			</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
@@ -396,7 +258,7 @@
 			<artifactId>
 				org.eclipse.dirigible.runtime.metrics
 			</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
@@ -405,7 +267,7 @@
 			<artifactId>
 				org.eclipse.dirigible.runtime.mobile
 			</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
@@ -414,7 +276,7 @@
 			<artifactId>
 				org.eclipse.dirigible.runtime.scheduler
 			</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
@@ -423,47 +285,38 @@
 			<artifactId>
 				org.eclipse.dirigible.runtime.security
 			</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible.runtime</groupId>
 			<artifactId>org.eclipse.dirigible.runtime.sql</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible.runtime</groupId>
 			<artifactId>org.eclipse.dirigible.runtime.web</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible.runtime</groupId>
 			<artifactId>org.eclipse.dirigible.runtime.wiki</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible.runtime</groupId>
 			<artifactId>org.eclipse.dirigible.runtime.workspace</artifactId>
-			<version>${project.version}</version>
+			<version>2.7.170225</version>
 			<type>eclipse-plugin</type>
 			<scope>provided</scope>
 		</dependency>
-        
-        
-        <dependency>
-            <groupId>org.eclipse.dirigible.air</groupId>
-            <artifactId>org.eclipse.dirigible.air</artifactId>
-            <version>${project.version}</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency>
 		
 		<!--
 		<dependency>
