Mini packaging option added

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/pom.xml
@@ -238,9 +238,10 @@
 		</profile>
 	</profiles>
 	<modules>
-		<module>runtime.tomcat</module>
 		<module>all.tomcat</module>
+		<module>runtime.tomcat</module>
         <module>air.tomcat</module>
+        <module>mini.tomcat</module>
 	</modules>
 
 </project>
