Adds JDBC Driver support for HANA, PostgreSQL & MySQL

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/launch.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/launch.ini
@@ -11,4 +11,4 @@ eclipse.*=@null
 
 osgi.parentClassloader=fwk
 osgi.contextClassLoaderParent=fwk
-org.osgi.framework.system.packages.extra=javax.websocket,javax.websocket.server,javax.mail,javax.mail.internet,org.eclipse.dirigible.ide.bridge,content
+org.osgi.framework.system.packages.extra=javax.websocket,javax.websocket.server,javax.mail,javax.mail.internet,org.eclipse.dirigible.ide.bridge,content,com.sap.db.jdbc,org.postgresql,com.mysql.jdbc
