--- a/modules/repository-local/pom.xml
+++ b/modules/repository-local/pom.xml
@@ -32,22 +32,23 @@
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-repository-api</artifactId>
-            <version>3.0</version>
+            <version>${dirigible.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-repository-api-test</artifactId>
-            <version>3.0</version>
+            <version>${dirigible.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-commons-logging</artifactId>
-            <version>3.0</version>
+            <version>${dirigible.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-repository-zip</artifactId>
-            <version>3.0</version>
+            <version>${dirigible.version}</version>
         </dependency>
         <dependency>
 		    <groupId>commons-io</groupId>
