--- a/modules/repository-zip/pom.xml
+++ b/modules/repository-zip/pom.xml
@@ -32,12 +32,12 @@
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-repository-api</artifactId>
-            <version>3.0</version>
+            <version>${dirigible.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-commons-logging</artifactId>
-            <version>3.0</version>
+            <version>${dirigible.version}</version>
         </dependency>
         <dependency>
 		    <groupId>commons-io</groupId>
