--- a/pom.xml
+++ b/pom.xml
@@ -156,23 +156,77 @@
         <!--
         <module>modules/repository-rest</module>
          -->
+        <module>modules/runtime-core</module>
+        
+        <module>releng/war-all</module>
 	</modules>
     
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.25</version>
+            <version>${slf4j.version}</version>
+        </dependency>
+        
+        <!-- Test Dependencies  -->
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>${okhttp.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp-urlconnection</artifactId>
+            <version>${okhttp.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j.simple.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>${hamcrest.all.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- End Test Dependencies  -->
+        
     </dependencies>
     
     <properties>
+    	<dirigible.version>3.0</dirigible.version>
         <java.version>1.8</java.version>
+        <cxf.version>3.0.3</cxf.version>
+        <gson.version>2.2.4</gson.version>
+        <guice.version>3.0</guice.version>
+        <javax.persistence.version>2.1.0</javax.persistence.version>
+        <eclipselink.version>2.5.1</eclipselink.version>
+        <maven.resource.plugin.version>2.7</maven.resource.plugin.version>
+        <skip.tests>true</skip.tests>
+        <mockito.version>1.10.8</mockito.version>
+        <junit.version>4.11</junit.version>
+        <hamcrest.all.version>1.3</hamcrest.all.version>
+        <retrofit.version>1.8.0</retrofit.version>
+        <okhttp.version>2.7.5</okhttp.version>
+        <slf4j.version>1.7.5</slf4j.version>
+        <slf4j.simple.version>1.7.12</slf4j.simple.version>
+        <activiti.version>5.22.0</activiti.version>
+        <com.h2database.version>1.4.193</com.h2database.version>
     </properties>
 
 </project>
