--- a/modules/runtime-core/pom.xml
+++ b/modules/runtime-core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
 		<artifactId>dirigible-parent</artifactId>
-		<version>3.0</version>
+		<version>${dirigible.version}</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
