refactoring related to configuration

--- a/modules/commons-config/src/main/resources/dirigible.properties
+++ b/modules/commons-config/src/main/resources/dirigible.properties
@@ -1,4 +1,5 @@
 # General
+DIRIGIBLE_PRODUCT_NAME="Eclipse Dirigible";
 DIRIGIBLE_PRODUCT_VERSION=3.0
 DIRIGIBLE_PRODUCT_TYPE=all
 DIRIGIBLE_INSTANCE_NAME=local
