--- a/modules/repository-api/pom.xml
+++ b/modules/repository-api/pom.xml
@@ -27,5 +27,13 @@
             </plugin>
         </plugins>
     </build>
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-commons-config</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
