Separation on Repository modules

--- a/modules/repository-local/src/main/resources/dirigible-repository-local.properties
+++ b/modules/repository-local/src/main/resources/dirigible-repository-local.properties
@@ -1,2 +1,3 @@
+DIRIGIBLE_REPOSITORY_PROVIDER=local
 DIRIGIBLE_LOCAL_REPOSITORY_ROOT_FOLDER=.
 DIRIGIBLE_LOCAL_REPOSITORY_ROOT_FOLDER_IS_ABSOLUTE=false 
