--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,8 @@
 	<modules>
         <module>modules/commons-logging</module>
         <module>modules/commons-config</module>
+
+        <module>modules/repository</module>
 		<module>modules/repository-api</module>
 		<module>modules/repository-api-test</module>
         <module>modules/repository-zip</module>
