--- a/pom.xml
+++ b/pom.xml
@@ -147,10 +147,10 @@
 	</issueManagement>
 
 	<modules>
+		<module>modules/commons-api</module>
         <module>modules/commons-logging</module>
         <module>modules/commons-config</module>
 
-        <module>modules/repository</module>
 		<module>modules/repository-api</module>
 		<module>modules/repository-api-test</module>
         <module>modules/repository-zip</module>
