Add dynamic injection of DirigibleServices

--- a/modules/commons-api/pom.xml
+++ b/modules/commons-api/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
-	<name>Commons - Configurations</name>
+	<name>Commons - API</name>
 	<artifactId>dirigible-commons-api</artifactId>
     <packaging>jar</packaging>
     
