--- a/modules/engine-web/pom.xml
+++ b/modules/engine-web/pom.xml
@@ -31,6 +31,11 @@
     <dependencies>
     	<dependency>
             <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-commons-api</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
+    	<dependency>
+            <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-repository-api</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
