--- a/modules/api-utils/pom.xml
+++ b/modules/api-utils/pom.xml
@@ -9,8 +9,8 @@
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
-	<name>Engine - Web</name>
-	<artifactId>dirigible-engine-web</artifactId>
+	<name>API - utils</name>
+	<artifactId>dirigible-api-utils</artifactId>
     <packaging>jar</packaging>
     
     <build>
@@ -27,18 +27,12 @@
             </plugin>
         </plugins>
     </build>
-    
     <dependencies>
     	<dependency>
-            <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-repository-api</artifactId>
-            <version>${dirigible.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-api-net-http</artifactId>
-            <version>${dirigible.version}</version>
-        </dependency>
+		    <groupId>commons-codec</groupId>
+		    <artifactId>commons-codec</artifactId>
+		    <version>${commons.codec}</version>
+		</dependency>
     </dependencies>
 
 </project>
