--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,9 @@
         <module>modules/engine-web</module>
         <module>modules/runtime-core</module>
         
+        <module>modules/api-net-http</module>
+        <module>modules/api-utils</module>
+        
         <module>content/core-api</module>
         
         <module>releng/war-all</module>
@@ -235,7 +238,7 @@
 		<dependency>
 		    <groupId>commons-io</groupId>
 		    <artifactId>commons-io</artifactId>
-		    <version>2.2</version>
+		    <version>${commons.io}</version>
 		</dependency>
         
         <!-- Test Dependencies  -->
@@ -277,6 +280,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     	<dirigible.version>3.0</dirigible.version>
         <java.version>1.8</java.version>
+        <commons.io>2.5</commons.io>
+        <commons.codec>1.10</commons.codec>
         <cxf.version>3.0.3</cxf.version>
         <gson.version>2.2.4</gson.version>
         <guice.version>3.0</guice.version>
