--- a/modules/engine-web/pom.xml
+++ b/modules/engine-web/pom.xml
@@ -41,7 +41,7 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-api-net-http</artifactId>
+            <artifactId>dirigible-api-http</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
     </dependencies>
