--- a/modules/repository-local/pom.xml
+++ b/modules/repository-local/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>dirigible-repository-zip</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
+        <dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-api-auth</artifactId>
+			<version>${dirigible.version}</version>
+    	</dependency>
     </dependencies>
 
 </project>
