skip tests for travis build during poc phase

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install: mvn install -f pom.xml -DskipTests=true
 before_script:
   - docker login -u $DOCKER_USER -p $DOCKER_PASS
 script:
-  - mvn test -f pom.xml
+#  - mvn test -f pom.xml
   - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH; fi`
   - docker build -f releng/Dockerfile-tomcat -t $REPO:$COMMIT releng/
   - docker tag $REPO:$COMMIT $REPO:$TAG
