--- a/pom.xml
+++ b/pom.xml
@@ -35,98 +35,164 @@
 	</scm>
 
 	<profiles>
-	  <profile>
-	    <id>default</id>
-	    <activation>
-	      <activeByDefault>true</activeByDefault>
-	    </activation>
-		<build>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>2.4</version>
-					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
-						<debug>true</debug>
-						<debuglevel>lines,vars,source</debuglevel>
-					</configuration>
-				</plugin>
-			</plugins>
-		</build>
-	  </profile>
-
-	  <profile>
-	    <id>findbugs</id>
-		<build>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>2.4</version>
-					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
-						<debug>true</debug>
-						<debuglevel>lines,vars,source</debuglevel>
-					</configuration>
-				</plugin>
-				<plugin>
-		            <groupId>org.codehaus.mojo</groupId>
-		            <artifactId>findbugs-maven-plugin</artifactId>
-		            <version>3.0.3</version>
-		            <configuration>
-		               <findbugsXmlOutput>true</findbugsXmlOutput>
-		               <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
-		               <xmlOutput>true</xmlOutput>
-		               <failOnError>false</failOnError>
-		               <excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
-		            </configuration>
-		            <executions>
-		                <execution>
-		                    <id>analyze-compile</id>
-		                    <phase>compile</phase>
-		                    <goals>
-		                        <goal>check</goal>
-		                    </goals>
-		                </execution>
-		            </executions>
-		         </plugin>
-		         <plugin>
-		            <groupId>org.apache.maven.plugins</groupId>
-		            <artifactId>maven-pmd-plugin</artifactId>
-		            <configuration>
-		               <sourceEncoding>utf-8</sourceEncoding>
-		               <minimumTokens>100</minimumTokens>
-		               <targetJdk>1.8</targetJdk>
-		               <format>xml</format>
-		               <failOnViolation>false</failOnViolation>
-		            </configuration>
-		         </plugin>
-			</plugins>
-
-			<pluginManagement>
+		<profile>
+			<id>default</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
 				<plugins>
 					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>emma-maven-plugin</artifactId>
-						<version>1.0-alpha-3</version>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>2.4</version>
 						<configuration>
-							<filters>
-								<filter>-org.eclipse.dirigible.*</filter>
-							</filters>
+							<source>1.8</source>
+							<target>1.8</target>
+							<debug>true</debug>
+							<debuglevel>lines,vars,source</debuglevel>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>findbugs</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>2.4</version>
+						<configuration>
+							<source>1.8</source>
+							<target>1.8</target>
+							<debug>true</debug>
+							<debuglevel>lines,vars,source</debuglevel>
 						</configuration>
 					</plugin>
 					<plugin>
-		               <groupId>org.apache.maven.plugins</groupId>
-		               <artifactId>maven-pmd-plugin</artifactId>
-		               <version>2.5</version>
-		            </plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>findbugs-maven-plugin</artifactId>
+						<version>3.0.3</version>
+						<configuration>
+							<findbugsXmlOutput>true</findbugsXmlOutput>
+							<findbugsXmlWithMessages>true</findbugsXmlWithMessages>
+							<xmlOutput>true</xmlOutput>
+							<failOnError>false</failOnError>
+							<excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
+						</configuration>
+						<executions>
+							<execution>
+								<id>analyze-compile</id>
+								<phase>compile</phase>
+								<goals>
+									<goal>check</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-pmd-plugin</artifactId>
+						<configuration>
+							<sourceEncoding>utf-8</sourceEncoding>
+							<minimumTokens>100</minimumTokens>
+							<targetJdk>1.8</targetJdk>
+							<format>xml</format>
+							<failOnViolation>false</failOnViolation>
+						</configuration>
+					</plugin>
 				</plugins>
-			</pluginManagement>
-		</build>
-	  </profile>
+
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.codehaus.mojo</groupId>
+							<artifactId>emma-maven-plugin</artifactId>
+							<version>1.0-alpha-3</version>
+							<configuration>
+								<filters>
+									<filter>-org.eclipse.dirigible.*</filter>
+								</filters>
+							</configuration>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-pmd-plugin</artifactId>
+							<version>2.5</version>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+
+		<profile>
+			<id>release</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>2.4</version>
+						<configuration>
+							<source>1.8</source>
+							<target>1.8</target>
+							<debug>true</debug>
+							<debuglevel>lines,vars,source</debuglevel>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>2.2.1</version>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>2.9.1</version>
+						<executions>
+							<execution>
+								<id>attach-javadocs</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.5</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
 	</profiles>
 
 	<repositories>
@@ -146,23 +212,23 @@
 		<url>http://bugs.dirigible.io</url>
 	</issueManagement>
 
-    <dependencies>
-    	<dependency>
-		    <groupId>javax.servlet</groupId>
-		    <artifactId>javax.servlet-api</artifactId>
-		    <version>3.1.0</version>
+	<dependencies>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
 		</dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>${slf4j.simple.version}</version>
-        </dependency>
-        <dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>${slf4j.simple.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.inject</groupId>
 			<artifactId>guice</artifactId>
 			<version>${guice.version}</version>
@@ -201,112 +267,104 @@
 			<artifactId>gson</artifactId>
 			<version>${gson.version}</version>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>javax.persistence</artifactId>
-			<version>${javax.persistence.version}</version>
-		</dependency> -->
-		<!-- <dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>eclipselink</artifactId>
-			<version>${eclipselink.version}</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.eclipse.persistence</groupId> <artifactId>javax.persistence</artifactId> 
+			<version>${javax.persistence.version}</version> </dependency> -->
+		<!-- <dependency> <groupId>org.eclipse.persistence</groupId> <artifactId>eclipselink</artifactId> 
+			<version>${eclipselink.version}</version> </dependency> -->
 		<dependency>
-		    <groupId>commons-io</groupId>
-		    <artifactId>commons-io</artifactId>
-		    <version>${commons.io}</version>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${commons.io}</version>
 		</dependency>
-        
-        <!-- Test Dependencies  -->
-        <dependency>
-            <groupId>com.squareup.okhttp</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>${okhttp.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.squareup.okhttp</groupId>
-            <artifactId>okhttp-urlconnection</artifactId>
-            <version>${okhttp.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>${mockito.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
-            <version>${hamcrest.all.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <!-- End Test Dependencies  -->
-        
-    </dependencies>
-    
-    <properties>
-    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+		<!-- Test Dependencies -->
+		<dependency>
+			<groupId>com.squareup.okhttp</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>${okhttp.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp</groupId>
+			<artifactId>okhttp-urlconnection</artifactId>
+			<version>${okhttp.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>${mockito.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>${hamcrest.all.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- End Test Dependencies -->
+
+	</dependencies>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    	<dirigible.version>3.0</dirigible.version>
-        <java.version>1.8</java.version>
-        <commons.io>2.5</commons.io>
-        <commons.codec>1.10</commons.codec>
-        <cxf.version>3.1.11</cxf.version>
-        <gson.version>2.2.4</gson.version>
-        <guice.version>3.0</guice.version>
-        <javax.persistence.version>2.1.0</javax.persistence.version>
-        <eclipselink.version>2.5.1</eclipselink.version>
-        <maven.resource.plugin.version>2.7</maven.resource.plugin.version>
-        <skip.tests>true</skip.tests>
-        <mockito.version>1.10.8</mockito.version>
-        <junit.version>4.11</junit.version>
-        <hamcrest.all.version>1.3</hamcrest.all.version>
-        <retrofit.version>1.8.0</retrofit.version>
-        <okhttp.version>2.7.5</okhttp.version>
-        <slf4j.version>1.7.5</slf4j.version>
-        <slf4j.simple.version>1.7.12</slf4j.simple.version>
-        <activiti.version>5.22.0</activiti.version>
-        <com.h2database.version>1.4.193</com.h2database.version>
+		<dirigible.version>3.0</dirigible.version>
+		<java.version>1.8</java.version>
+		<commons.io>2.5</commons.io>
+		<commons.codec>1.10</commons.codec>
+		<cxf.version>3.1.11</cxf.version>
+		<gson.version>2.2.4</gson.version>
+		<guice.version>3.0</guice.version>
+		<javax.persistence.version>2.1.0</javax.persistence.version>
+		<eclipselink.version>2.5.1</eclipselink.version>
+		<maven.resource.plugin.version>2.7</maven.resource.plugin.version>
+		<skip.tests>true</skip.tests>
+		<mockito.version>1.10.8</mockito.version>
+		<junit.version>4.11</junit.version>
+		<hamcrest.all.version>1.3</hamcrest.all.version>
+		<retrofit.version>1.8.0</retrofit.version>
+		<okhttp.version>2.7.5</okhttp.version>
+		<slf4j.version>1.7.5</slf4j.version>
+		<slf4j.simple.version>1.7.12</slf4j.simple.version>
+		<activiti.version>5.22.0</activiti.version>
+		<com.h2database.version>1.4.193</com.h2database.version>
 		<maven.scm.plugin.version>1.9</maven.scm.plugin.version>
-    </properties>
-    
-    <modules>
+	</properties>
+
+	<modules>
 		<module>modules/commons-api</module>
-        <module>modules/commons-config</module>
+		<module>modules/commons-config</module>
 
 		<module>modules/repository-api</module>
 		<module>modules/repository-api-test</module>
-        <module>modules/repository-zip</module>
+		<module>modules/repository-zip</module>
 		<module>modules/repository-local</module>
 		<module>modules/repository-master</module>
-        <!--
-        <module>modules/repository-rest</module>
-         -->
-         
-        
-        <module>modules/runtime-core</module>
-        
-        <module>modules/engine-api</module>
-        <module>modules/engine-web</module>
-        <module>modules/engine-js</module>
-        <module>modules/engine-js-rhino</module>
-        <module>modules/engine-js-nashorn</module>
-        
-        <module>modules/api-utils</module>
-        <module>modules/api-http</module>
-        <module>modules/api-auth</module>
-        
-        
-        <module>content/core-api</module>
-        
-        <module>releng/war-all</module>
+		<!-- <module>modules/repository-rest</module> -->
+
+
+		<module>modules/runtime-core</module>
+
+		<module>modules/engine-api</module>
+		<module>modules/engine-web</module>
+		<module>modules/engine-js</module>
+		<module>modules/engine-js-rhino</module>
+		<module>modules/engine-js-nashorn</module>
+
+		<module>modules/api-utils</module>
+		<module>modules/api-http</module>
+		<module>modules/api-auth</module>
+
+
+		<module>content/core-api</module>
+
+		<module>releng/war-all</module>
 	</modules>
 
 </project>
