--- a/pom.xml
+++ b/pom.xml
@@ -349,8 +349,8 @@
 		<module>modules/repository-master</module>
 		<!-- <module>modules/repository-rest</module> -->
 
-		<module>modules/datasource-api</module>
-		<module>modules/datasource-local</module>
+		<module>modules/database-api</module>
+		<module>modules/database-derby</module>
 
 		<module>modules/runtime-core</module>
 
